# math-topics

./: MathMinds_Exploratory.ipynb  MathMinds_Modeling.ipynb  app.py  demo2_select_menu.py  pyproject.toml
docs/: writeup1.tex
modules/: graph.py  graphCode.py
