[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.1",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.6",
    "nbconvert>=7.16.6",
    "networkx>=3.5",
    "pandas>=2.3.3",
    "scipy>=1.16.2",
    "shiny>=1.5.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
